<resources>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="app_name">متخصص</string>
    <string name="update">به روز رسانی</string>
    <string name="action_settings">تنظیمات</string>
    <!--<string name="Logo_name">متخصص</string>-->
    <string name="Phone_Number">شماره همراه</string>
    <string name="Send">ارسال</string>
    <string name="accep_code">کد تایید</string>
    <string name="firstname">نام</string>
    <string name="lastname">نام خانوادگی</string>
    <string name="education">تحصیلات</string>
    <string name="Expertise">تخصص ها</string>
    <string name="brithday">تاریخ تولد</string>
    <string name="Profile">حساب کاربری</string>
    <string name="Yourcommitment">تعهدات شما</string>
    <string name="Ourcommitment">تعهدات ما</string>
    <string name="Messages">پیام  ها</string>
    <string name="GiftBank">بانک هدیه</string>
    <string name="Contact">تماس با پشتیبانی</string>
    <string name="Help">راهنما</string>
    <string name="About">درباره ما</string>
    <string name="Exit">خروج از برنامه</string>
    <string name="Logout">خروج از حساب کاربری</string>
    <string name="Login">ورود</string>
    <string name="Job">سرویس های رسیده</string>
    <string name="Duty">سرویس های دردست اقدام</string>
    <string name="Select">انتخاب</string>
    <string name="Cansel">لغو</string>
    <string name="PerFactor">پیش فاکتور</string>
    <string name="Pause">وقفه</string>
    <string name="Visit">بازدید</string>
    <string name="Resume">ادامه کار</string>
    <string name="Final">اتمام کار</string>
    <string name="MainMenuTitle">آسپینو</string>
    <string name="StepJob">مراحل کاری</string>
    <string name="StepJobdetaile">ملزومات کاری</string>
    <string name="Save">ذخیره</string>
    <string name="titleStep">عنوان کاری</string>
    <string name="PriceJob">کارمزد</string>
    <string name="Unit">واحد</string>
    <string name="UnitPrice">هزینه هر واحد</string>
    <string name="StepJobDetaile">ملزومات کاری</string>
    <string name="titleToolsStep">لوازم مصرفی</string>
    <string name="Brand">برند</string>
    <string name="PriceTools">قیمت</string>
    <string name="Credits">اعتبارات</string>
    <string name="Delete">حذف</string>
    <string name="RefreshAcceptCode">دریافت مجدد کد تایید</string>
    <string name="RefreshCode">ارسال مجدد کد فعالسازی</string>
    <string name="TextYourCommitment">تعهدات شما</string>
    <string name="TextOurCommitment">تعهدات ما</string>
    <string name="ListVisit">بازدیدهای ثبت شده</string>
    <string name="servicename">نام سرویس</string>
    <string name="ServiDetailName">نوع سرویس</string>
    <string name="Add">افزودن</string>
    <string name="FinalSave">ثبت نهایی</string>
    <string name="value">مقدار</string>
    <string name="TitleTools">عنوان ملزومات</string>
    <string name="CheckTitleTool">آیا فاکتور ملزومات دارد؟</string>
    <string name="Description">توضیحات</string>
    <string name="Total">جمع</string>
    <string name="CaseResume">علت وقفه</string>
    <string name="CasePause">علت وقفه</string>
    <string name="CodeMoaref">کد معرف</string>
    <string name="service">سرویس</string>
    <string name="credite">اعتبارات</string>
    <string name="home">خانه</string>
    <string name="DutyItem">وظایف</string>
    <string name="RecentCredit">اعتبار فعلی:</string>
    <string name="IncreseCredit">افزایش اعتبار</string>
    <string name="History">تاریخچه خدمات</string>
    <string name="RelateUs">به ما بپیوندید!</string>
    <string name="telegram">تلگرام</string>
    <string name="instagram">اینستاگرام</string>
    <string name="SignUp">ثبت نام</string>
    <string name="NotMessage">پیغامی موجود نیست</string>
    <string name="Orders">سفارش ها</string>
    <string name="SendMessage">ارسال پیام</string>
    <string name="InfoContent">اطلاعات تماس</string>
    <string name="Call">برقراری تماس</string>
    <string name="MessageText">متن پیام</string>
    <string name="ListGift">لیست هدایا</string>
    <string name="ListMessages">لیست پیام های دریافتی</string>
    <string name="Message">پیام</string>
    <string name="usercode">کد کاربری</string>
    <string name="cash">پرداخت</string>
    <string name="CurrencyInsertCredit">مبلغ افزایش اعتبار</string>
    <string name="CallToCastumer">تماس با متقاضی</string>
    <string name="Invite_friends">دعوت از دوستان</string>
    <string name="rial">ریال</string>
    <string name="Addres">آدرس</string>
    <string name="edit">ویرایش</string>
    <string name="Email">ایمیل</string>
    <string name="TextAbout">درباره آسپینو</string>
    <string name="CallSupporter">تماس با پشتیبانی</string>
    <string name="CreditsGift">دریافت اعتبار هدیه</string>
    <string name="Register">فرم ثبت نام کاربر</string>
    <string name="RealOrLegal">حقیقی / حقوقی</string>
    <string name="Real">حقیقی</string>
    <string name="Legal">حقوقی</string>
    <string name="Gender">جنسیت</string>
    <string name="man">مرد</string>
    <string name="woman">زن</string>
    <string name="NumberShenasname">شماره شناسنامه</string>
    <string name="CodeMelli">کد ملی</string>
    <string name="Mobile">موبایل</string>
    <string name="NumberPhone">شماره ثابت</string>
    <string name="Experience">تخصص</string>
    <string name="PostalCode">کد پستی</string>
    <string name="NameCompani">نام شرکت</string>
    <string name="NameManager">مدیر عامل</string>
    <string name="NumberCo">شماره ثبت</string>
    <string name="AddressCo">آدرس قانونی شرکت</string>
    <string name="FieldOfExpertise">زمینه تخصص</string>
    <string name="ReceiveAnInterview">دریافت وقت مصاحبه</string>
    <string name="Rating">امتیاز دهی</string>
    <string name="SendRate">ثبت امتیاز</string>
    <string name="Role">قوانین و مقررات</string>
    <string name="AboutAspino">درباره آسپینو</string>
    <string name="ShowDetaile">مشاهده جزئیات</string>
    <string name="Income">درآمد</string>
    <string name="Wallet">کیف پول</string>
    <string name="Bank_ID">حساب بانکی</string>
    <string name="Karname_Mali">کارنامه مالی</string>
    <string name="Customer_Comment">نظرات مشتریان</string>
    <string name="Home_Page">صفحه اصلی</string>
    <string name="Offers">پیشنهاد ها</string>
    <string name="SendOffer">ارسال پیشنهاد</string>
    <string name="Info_Bank_ID">اطلاعات حساب بانکی</string>
    <string name="ID_Shaba">شماره شبا :</string>
    <string name="User_ID_Bank">نام صاحب حساب :</string>
    <string name="Bank">بانک صادر کننده :</string>
    <string name="SaveAndAccept">ثبت و تایید</string>
    <string name="DetaileOrder">جزئیات سفارش</string>
    <string name="Customer_Description_For_You">توضیحات مشتری برای شما :</string>
    <string name="CodeOrder">کد سفارش :</string>
    <string name="Date">تاریخ:</string>
    <string name="Time">ساعت:</string>
    <string name="Addres_Location">محدوده نشانی:</string>
    <string name="StatusHesab">وضعیت حساب</string>
    <string name="Currency">مبلغ:</string>
    <string name="IncomeFromAspino">درآمد آسپینو :</string>
    <string name="CustomersOrder">سفارش های مشتریان</string>
    <string name="certain">قطعی</string>
    <string name="Notification">اعلان ها</string>
    <string name="Today">امروز</string>
    <string name="Alerts">اعلان ها</string>
    <string name="Final_Price">هزینه نهایی:</string>
    <string name="Toman">تومان</string>
    <string name="ShowMap">مشاهده نقشه</string>
    <string name="SaveVisit">ثبت بازدید</string>
    <string name="EditPrice">اصلاح قیمت</string>
    <string name="ServiDetaile">جزئیات سفارش مشتری</string>
    <string name="StartJob">شروع به کار</string>
    <string name="Call2">تماس</string>
    <string name="CustomersCertains">سفارشات قطعی</string>
    <string name="default_notification_channel_id">Aspino_Expert</string>
    <string name="default_notification_channel_title">آسپینو</string>
</resources>
