<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layoutDirection="rtl"
    android:layout_gravity="right"
    android:background="@color/mdtp_transparent"
    tools:openDrawer="start">
    <include layout="@layout/list_icome"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <android.support.design.widget.NavigationView
        android:layout_width="140dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:layoutDirection="rtl"
        android:id="@+id/navigation_view"
        android:background="#252525"
        app:headerLayout="@layout/nav_header"
        app:itemIconTint="@android:color/white"
        app:itemTextColor="#ffffff">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="130dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/LinearCallSupporter"
                android:gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:src="@drawable/call_to_supporter"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#fff"
                    android:gravity="center"
                    android:text="@string/CallSupporter"
                    android:fontFamily="@font/vazir"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/LinearRole"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_marginTop="30dp">
                <ImageView
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:src="@drawable/role"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#fff"
                    android:gravity="center"
                    android:text="@string/Role"
                    android:fontFamily="@font/vazir"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/LinearAboutAspino"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_marginTop="30dp">
                <ImageView
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:src="@drawable/about_menu"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#fff"
                    android:gravity="center"
                    android:text="@string/AboutAspino"
                    android:fontFamily="@font/vazir"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/LinearLogout"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_marginTop="30dp">
                <ImageView
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:src="@drawable/logout_menu"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#fff"
                    android:gravity="center"
                    android:text="@string/Logout"
                    android:fontFamily="@font/vazir"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="right">
            <ImageView
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_marginRight="-15dp"
                android:src="@drawable/logo_menu"/>
        </LinearLayout>
    </android.support.design.widget.NavigationView>
</android.support.v4.widget.DrawerLayout>
